Show tooltips in SHELF_AUTO_HIDE ShelfVisibilityState.

Tooltips should show when the auto-hidden shelf is exposed.
Regressed in https://codereview.chromium.org/2176813002

BUG=651645
TEST=Shelf shows tooltips in auto-hide state; see bug.
R=jamescook@chromium.org

Review-Url: https://codereview.chromium.org/2383833003
Cr-Commit-Position: refs/heads/master@{#422190}

Former-commit-id: 87ee8b86123d1ecf3f9d458ccf92674d3e7b75fc